--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 <body link="#00FF00">
 <table  bordercolor="#000000" border="1px" >
+    
+    <article>
     <h1 class="h1"> <span class="h1">CSS, ¿qué es?</span></h1>
     <p class="pNormal">El css (hojas de estilo en cascada) es un lenguaje que define la apariencia de un documento escrito en un lenguaje de marcado (por ejemplo, <a href="http://">HTML</a>).</p>
 
@@ -23,6 +25,6 @@
    </ul>
    <p class="PNormal"><span class="pNormal">Esta separación entre la <strong>estructura</strong> y la <strong>presentación</strong> es muy importante, ya que permite que sólo cambiando los CSS se modifique completamente el aspecto de una página web.</span><span class="PNaranja">Esto posibilita, entre otras cosas, que los usuarios puedan usar hojas de estilo personalizadas (como hojas de estilo de alto contraste o de accesibilidad).</span></p>
    
-
+    </article>
 </body>
 </html>
